# oferta-formativa-educacion-superior

./: .gitignore  README.md  pyproject.toml  requirements.txt
config/: settings.yaml
data/processed/: oferta_formativa_clean.parquet
docs/: carreras_por_ies_highcharts.html  costos_medianos_scatter_highcharts.html  index.html  interactive.js  modalidad_jornada_highcharts.html  niveles_por_vacantes_highcharts.html  styles.css  vacantes_por_institucion.html  vacantes_por_institucion_highcharts.html
docs/reports/: oferta_formativa_summary.csv
notebooks/: analisis_region_los_rios.ipynb  analisis_region_los_rios_detallado.ipynb  analisis_regional_comparativo.ipynb  vacantes_por_institucion.ipynb
scripts/: run_etl.py
src/oferta_formativa_etl/: __init__.py  cli.py  pipeline.py
src/oferta_formativa_etl.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/oferta_formativa_etl/config/: loader.py  models.py
src/oferta_formativa_etl/extractors/: base.py
src/oferta_formativa_etl/loaders/: dataframe_loader.py
src/oferta_formativa_etl/transformers/: base.py  offer_transformer.py
tests/: test_offer_transformer.py
